modifico models.py con los nuevos datos de las tablas

--- a/FRONT/Pipfile
+++ b/FRONT/Pipfile
@@ -6,6 +6,10 @@ name = "pypi"
 [packages]
 flask = "*"
 requests = "*"
+flask-sqlalchemy = "*"
+mysql-connector-python = "*"
+sqlalchemy = "*"
+pymysql = "*"
 
 [dev-packages]
 
